# td

./: .gitignore  CMakeLists.txt  README.md  src.ps1~  tdlibjson-devel.spec.in  tdlibjson.pc.in  tdlibjson.spec.in
rpm/: tdlibjson.spec
sqlite/: CMakeLists.txt
td/telegram/: Client.h  ClientJson.cpp
tdactor/: CMakeLists.txt
tddb/: CMakeLists.txt
tdnet/: CMakeLists.txt
tdutils/: CMakeLists.txt
tg_cli/: CMakeLists.txt
